gitops/apps/freshrss/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: freshrss
  labels:
    app.kubernetes.io/name: freshrss
