gitops/apps/freshrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: freshrss
  labels:
    app.kubernetes.io/name: freshrss
    app.kubernetes.io/instance: freshrss
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: freshrss
    app.kubernetes.io/instance: freshrss
  ports:
    - port: 80
      targetPort: 80
      name: http
